# Mpail2-OmniReset-codex-

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: CODEX_NEW_MACHINE_PROMPT_CN.md  HANDOFF_NEXT_AI.md  INSTALL.md  OMNIRESET_INTEGRATION.md  OMNIRESET_LAB_HANDOFF_CN.md  OMNIRESET_SETUP_CN.md
envs/: mpail2-core.yml  mpail2-omnireset.yml
mpail2/: __init__.py  dynamics.py  encoder.py  layers.py  learner.py  planner.py  reward.py  runner.py  sampling.py  storage.py  value.py
mpail2/configs/: cfgs.py  defs.py
mpail2/envs/: __init__.py
mpail2/envs/gym_mujoco/: __init__.py  env_factory.py  wrappers.py
mpail2/envs/isaac/: launcher.py
mpail2/envs/real/: __init__.py
mpail2/envs/utils/: __init__.py  paths.py  video_utils.py
mpail2/train/: README.md  __init__.py  registry.py  train.py
mpail2/train/configs/: __init__.py  franka_image_learner_config.py  gym_train_config.py  isaac_base_config.py  omnireset_learner_config.py
mpail2/train/envs/: __init__.py  franka_pick_place.py  franka_push.py  omnireset_peg.py
mpail2/train/gym_tasks/: __init__.py  gym_assembly.py  (+2 more)
mpail2/utils/: __init__.py  obs_normalizer.py  parse.py  rollout_vis.py  stats.py
scripts/: bootstrap_lab_omnireset.sh  check_omnireset_readiness.py  collect_state_demos_omnireset.py  convert_omnireset_demo.py  eval_omnireset.py  filter_idle_demos.py  get_omnireset_peg_demo.sh  omnireset_env_smoke.py  run_lab_omnireset.sh  watch_expert.py
tests/: test_gym_hydra.py  test_hydra_learner_overrides.py  test_planner_prior_controls.py  test_train_dispatch.py  test_train_runtime_shared.py
(+62 files in other folders)
